--- a/stipayroll/stipayroll-main/payrollsystemsti/payrollsystemsti/payrollsystemsti.csproj
+++ b/stipayroll/stipayroll-main/payrollsystemsti/payrollsystemsti/payrollsystemsti.csproj
@@ -89,6 +89,12 @@
     <Compile Include="formSettings.Designer.cs">
       <DependentUpon>formSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="leaveApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="leaveApplication.Designer.cs">
+      <DependentUpon>leaveApplication.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdminTabs\userRegister.cs">
