--- a/stipayroll/stipayroll-main/payrollsystemsti/payrollsystemsti/payrollsystemsti.csproj
+++ b/stipayroll/stipayroll-main/payrollsystemsti/payrollsystemsti/payrollsystemsti.csproj
@@ -107,6 +107,7 @@
     <Compile Include="formSettings.Designer.cs">
       <DependentUpon>formSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdminTabs\userRegister.cs">
