--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -53,6 +53,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminTabs\accountsArchive.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\accountsArchive.Designer.cs">
+      <DependentUpon>accountsArchive.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminTabs\employeeRegister.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,11 +122,11 @@
     <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AdminTabs\userRegister.cs">
+    <Compile Include="AdminTabs\manageEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminTabs\userRegister.Designer.cs">
-      <DependentUpon>userRegister.cs</DependentUpon>
+    <Compile Include="AdminTabs\manageEmployee.Designer.cs">
+      <DependentUpon>manageEmployee.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AdminTabs\employeeRegister.resx">
       <DependentUpon>employeeRegister.cs</DependentUpon>
@@ -130,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\leaveCategoriesManagement.resx">
       <DependentUpon>leaveCategoriesManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminTabs\leaveManagement.resx">
+      <DependentUpon>leaveManagement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="changePass.resx">
       <DependentUpon>changePass.cs</DependentUpon>
@@ -159,8 +168,8 @@
     <EmbeddedResource Include="AdminTabs\dashBoard.resx">
       <DependentUpon>dashBoard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AdminTabs\userRegister.resx">
-      <DependentUpon>userRegister.cs</DependentUpon>
+    <EmbeddedResource Include="AdminTabs\manageEmployee.resx">
+      <DependentUpon>manageEmployee.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
