--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -77,6 +77,12 @@
     <Compile Include="AdminTabs\leaveCategoriesManagement.Designer.cs">
       <DependentUpon>leaveCategoriesManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminTabs\leaveDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\leaveDetails.Designer.cs">
+      <DependentUpon>leaveDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminTabs\leaveManagement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\leaveCategoriesManagement.resx">
       <DependentUpon>leaveCategoriesManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminTabs\leaveDetails.resx">
+      <DependentUpon>leaveDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\leaveManagement.resx">
       <DependentUpon>leaveManagement.cs</DependentUpon>
