--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -40,6 +40,9 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Ports, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.Ports.8.0.0\lib\net462\System.IO.Ports.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -58,6 +61,12 @@
     </Compile>
     <Compile Include="AdminTabs\accountsArchive.Designer.cs">
       <DependentUpon>accountsArchive.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminTabs\attendanceMonitoring.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\attendanceMonitoring.Designer.cs">
+      <DependentUpon>attendanceMonitoring.cs</DependentUpon>
     </Compile>
     <Compile Include="AdminTabs\departmentList.cs">
       <SubType>Form</SubType>
@@ -148,6 +157,9 @@
     </Compile>
     <EmbeddedResource Include="AdminTabs\accountsArchive.resx">
       <DependentUpon>accountsArchive.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminTabs\attendanceMonitoring.resx">
+      <DependentUpon>attendanceMonitoring.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\departmentList.resx">
       <DependentUpon>departmentList.cs</DependentUpon>
