--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -104,6 +104,7 @@
     <Compile Include="AdminTabs\leaveManagement.Designer.cs">
       <DependentUpon>leaveManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="ArduinoComms.cs" />
     <Compile Include="changePass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +128,12 @@
     </Compile>
     <Compile Include="EmployeeTabs\leaveApplication.Designer.cs">
       <DependentUpon>leaveApplication.cs</DependentUpon>
+    </Compile>
+    <Compile Include="enrollFingerprint.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="enrollFingerprint.Designer.cs">
+      <DependentUpon>enrollFingerprint.cs</DependentUpon>
     </Compile>
     <Compile Include="loginForm.cs">
       <SubType>Form</SubType>
@@ -187,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EmployeeTabs\leaveApplication.resx">
       <DependentUpon>leaveApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="enrollFingerprint.resx">
+      <DependentUpon>enrollFingerprint.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="loginForm.resx">
       <DependentUpon>loginForm.cs</DependentUpon>
