--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -86,6 +86,12 @@
     <Compile Include="AdminTabs\employeeSalary.Designer.cs">
       <DependentUpon>employeeSalary.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminTabs\HistoryLogForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\HistoryLogForm.Designer.cs">
+      <DependentUpon>HistoryLogForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminTabs\leaveCategoriesManagement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\employeeSalary.resx">
       <DependentUpon>employeeSalary.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminTabs\HistoryLogForm.resx">
+      <DependentUpon>HistoryLogForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\leaveCategoriesManagement.resx">
       <DependentUpon>leaveCategoriesManagement.cs</DependentUpon>
