Maintenance(Departments, Roles, Positions, Leaves), Attedance Monitoring , Employee Register(big changes)

--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -110,6 +110,24 @@
     <Compile Include="AdminTabs\leaveManagement.Designer.cs">
       <DependentUpon>leaveManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminTabs\manageDP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\manageDP.Designer.cs">
+      <DependentUpon>manageDP.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminTabs\managePositions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\managePositions.Designer.cs">
+      <DependentUpon>managePositions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminTabs\manageRoles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\manageRoles.Designer.cs">
+      <DependentUpon>manageRoles.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminTabs\overtimeApplication.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,6 +198,11 @@
     <Compile Include="AdminTabs\manageEmployee.Designer.cs">
       <DependentUpon>manageEmployee.cs</DependentUpon>
     </Compile>
+    <Compile Include="stipayrolldbDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>stipayrolldbDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminTabs\accountsArchive.resx">
       <DependentUpon>accountsArchive.cs</DependentUpon>
     </EmbeddedResource>
@@ -206,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\leaveManagement.resx">
       <DependentUpon>leaveManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminTabs\manageDP.resx">
+      <DependentUpon>manageDP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\overtimeApplication.resx">
       <DependentUpon>overtimeApplication.cs</DependentUpon>
@@ -260,6 +286,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="stipayrolldbDataSet.xsc">
+      <DependentUpon>stipayrolldbDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="stipayrolldbDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>stipayrolldbDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="stipayrolldbDataSet.xss">
+      <DependentUpon>stipayrolldbDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
