--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -192,11 +192,11 @@
     <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AdminTabs\manageEmployee.cs">
+    <Compile Include="AdminTabs\maintenance.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminTabs\manageEmployee.Designer.cs">
-      <DependentUpon>manageEmployee.cs</DependentUpon>
+    <Compile Include="AdminTabs\maintenance.Designer.cs">
+      <DependentUpon>maintenance.cs</DependentUpon>
     </Compile>
     <Compile Include="stipayrolldbDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -273,8 +273,8 @@
     <EmbeddedResource Include="AdminTabs\dashBoard.resx">
       <DependentUpon>dashBoard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AdminTabs\manageEmployee.resx">
-      <DependentUpon>manageEmployee.cs</DependentUpon>
+    <EmbeddedResource Include="AdminTabs\maintenance.resx">
+      <DependentUpon>maintenance.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
