--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -158,6 +158,12 @@
     <Compile Include="AdminTabs\PaySlipReport.Designer.cs">
       <DependentUpon>PaySlipReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminTabs\ViewAttendance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\ViewAttendance.Designer.cs">
+      <DependentUpon>ViewAttendance.cs</DependentUpon>
+    </Compile>
     <Compile Include="ArduinoComms.cs" />
     <Compile Include="changePass.cs">
       <SubType>Form</SubType>
@@ -269,6 +275,9 @@
       <DependentUpon>PaySlipReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\Report1.rdlc" />
+    <EmbeddedResource Include="AdminTabs\ViewAttendance.resx">
+      <DependentUpon>ViewAttendance.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="changePass.resx">
       <DependentUpon>changePass.cs</DependentUpon>
     </EmbeddedResource>
