--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -174,6 +174,12 @@
     <Compile Include="AdminTabs\PaySlipReport.Designer.cs">
       <DependentUpon>PaySlipReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminTabs\Transfer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminTabs\Transfer.Designer.cs">
+      <DependentUpon>Transfer.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminTabs\ViewAttendance.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -372,6 +378,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\Report1.rdlc" />
     <EmbeddedResource Include="AdminTabs\Report2.rdlc" />
+    <EmbeddedResource Include="AdminTabs\Transfer.resx">
+      <DependentUpon>Transfer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdminTabs\ViewAttendance.resx">
       <DependentUpon>ViewAttendance.cs</DependentUpon>
     </EmbeddedResource>
