--- a/payrollsystemsti/App.config
+++ b/payrollsystemsti/App.config
@@ -5,8 +5,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="payrollsystemsti.Properties.Settings.stipayrolldbConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=stipayrolldb;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="stipayrolldbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=stipayrolldb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="payrollsystemsti.Properties.Settings.stipayrolldbConnectionString"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=stipayrolldb;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="stipayrolldbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=stipayrolldb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="payrollsystemsti.Properties.Settings.stipayrolldbConnectionString1"
+      connectionString="Data Source=.;Initial Catalog=stipayrolldb;Integrated Security=True;Encrypt=False"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
