--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -364,6 +364,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>stipayrolldbDataSet4.xsd</DependentUpon>
     </Compile>
+    <Compile Include="stipayrolldbDataSet5.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>stipayrolldbDataSet5.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="stipayrolldbDataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>stipayrolldbDataSet6.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminTabs\accountsArchive.resx">
       <DependentUpon>accountsArchive.cs</DependentUpon>
     </EmbeddedResource>
@@ -575,6 +585,28 @@
     </None>
     <None Include="stipayrolldbDataSet4.xss">
       <DependentUpon>stipayrolldbDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="stipayrolldbDataSet5.xsc">
+      <DependentUpon>stipayrolldbDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="stipayrolldbDataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>stipayrolldbDataSet5.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="stipayrolldbDataSet5.xss">
+      <DependentUpon>stipayrolldbDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="stipayrolldbDataSet6.xsc">
+      <DependentUpon>stipayrolldbDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="stipayrolldbDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>stipayrolldbDataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="stipayrolldbDataSet6.xss">
+      <DependentUpon>stipayrolldbDataSet6.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
