mishel san kana

--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -84,6 +84,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddAttendance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddAttendance.Designer.cs">
+      <DependentUpon>AddAttendance.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminTabs\accountsArchive.cs">
       <SubType>Form</SubType>
     </Compile>
